Primer commit - subir script alumnosS3.py

--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -22,14 +22,17 @@ jobs:
         run: |
           pip install boto3 pandas pyarrow
 
+      - name: Configurar credenciales AWS
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-2
+
       - name: Copiar alumnos.csv a Downloads
         run: |
           mkdir -p ~/Downloads
           cp alumnos.csv ~/Downloads/alumnos.csv
 
       - name: Ejecutar script de subida
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: us-east-2
         run: python alumnosS3.py
